--- a/server/views/app.hbs
+++ b/server/views/app.hbs
@@ -1,1 +1,19 @@
-The app should be served here.
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Zapstrap - Empty Project</title>
+
+    <link rel="stylesheet/less" href="css/main.less" type="text/css" media="all" />
+    <script src="js/libs/less.js"></script>
+
+    <meta charset="UTF-8">
+    <meta name="description" content="">
+
+    <script data-main="js/main.js" src="js/libs/require.js"></script>
+
+  </head>
+
+  <body>
+    <div id="app"></div>
+  </body>
+</html>
