app should allow i18n with hbs

--- a/app/app/templates/layout.hbs
+++ b/app/app/templates/layout.hbs
@@ -1,4 +1,5 @@
 <div class="header">
   <h1 class="title">Zapstrap basic app layout</h1>
+  <p>Some sample text: {{$ "two" }}</p>
 </div>
 <div id="main-region"></div>
