the require config file should really be named require.config.js

--- a/server/views/layout.hbs
+++ b/server/views/layout.hbs
@@ -10,7 +10,7 @@
     <meta name="description" content="">
 
     <script src="js/libs/require.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/require.config.js"></script>
     <script>
       require(['jquery', 'app/app'],
         function($, App) {
